# faculty-hours-faculty

./: .pre-commit-config.yaml  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
.kube/faculty-hours-faculty-chart/: .gitignore  Chart.yaml  values.yaml
.kube/faculty-hours-faculty-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.kube/faculty-hours-faculty-chart/templates/tests/: test-connection.yaml
faculty/: main.py  settings.py
faculty/models/: database.py  models.py  schemas.py
faculty/routers/: database.py  faculty.py  models.py  producer.py  schemas.py
faculty/services/: producer.py
faculty/tests/: conftest.py
faculty/tests/test_routers/: test_faculty.py
